# opensearch-operator

./: CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.md  Tiltfile  crate-hashes.json  default.nix  performance_analyzer_config.sh  performance_analyzer_metrics.sh
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  config.yml
.github/workflows/: build.yaml  build.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
deploy/: DO_NOT_EDIT.md
deploy/helm/opensearch-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/opensearch-operator/crds/: crds.yaml
deploy/helm/opensearch-operator/templates/: clusterrole-operator.yaml  clusterrole-product.yaml  roles.yaml
docker/: Dockerfile
docs/: templating_vars.yaml
docs/modules/opensearch/pages/: index.adoc
docs/modules/opensearch/partials/: nav.adoc  supported-versions.adoc
extra/: crds.yaml
nix/: meta.json
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: controller.rs  framework.rs  main.rs
rust/operator-binary/src/controller/: apply.rs  build.rs  dereference.rs  node_config.rs  preprocess.rs  update_status.rs  validate.rs
rust/operator-binary/src/crd/: mod.rs  roundtrip_test_data.yaml
rust/operator-binary/src/framework/: builder.rs  cluster_resources.rs  config_overrides.rs  controller_utils.rs  listener.rs  role_group_utils.rs  role_utils.rs  types.rs  validation.rs
rust/operator-binary/src/framework/builder/: meta.rs  pdb.rs  volume.rs
rust/operator-binary/src/framework/builder/pod/: container.rs  volume.rs
rust/operator-binary/src/framework/kvp/: label.rs
rust/operator-binary/src/framework/macros/: attributed_string_type.rs
rust/operator-binary/src/framework/product_logging/: framework.rs
rust/operator-binary/src/framework/types/: common.rs  kubernetes.rs  operator.rs
rust/operator-binary/src/webhooks/: conversion.rs
scripts/: docs_templating.sh
tests/: release.yaml  test-definition.yaml
tests/templates/kuttl/backup-restore/: 01-rbac.yaml  03-create-truststore.yaml  10-assert.yaml  10-install-s3-credentials-secret.yaml  11-install-minio.yaml  11_minio-values.yaml  11_minio-values.yaml.j2  20-assert.yaml  20-create-opensearch-1-admin-certificate.yaml  21-install-opensearch-1.yaml.j2  22-create-testuser.yaml  23-assert.yaml  23-create-data.yaml  30-assert.yaml  30-create-snapshot.yaml  31-assert.yaml  31-backup-security-indices.yaml.j2  40-delete-opensearch-1.yaml  50-assert.yaml  50-create-opensearch-2-admin-certificate.yaml  50-install-opensearch-2.yaml.j2  51-assert.yaml  51-install-opensearch-2.yaml.j2  60-assert.yaml  60-restore-security-indices.yaml.j2  61-assert.yaml  61-restore-snapshot.yaml  70-assert.yaml  70-test-opensearch-2.yaml
tests/templates/kuttl/external-access/: 10-listener-classes.yaml  20-assert.yaml  20-install-opensearch.yaml  20_opensearch.yaml.j2  opensearch.yaml.j2
tests/templates/kuttl/ldap/: 10-install-openldap.yaml  11-assert.yaml  11-create-ldap-user.yaml  15-performance-analyzer-files.yaml  20-create-opensearch-security-config.yaml  20_opensearch-security-config.yaml.j2  21-assert.yaml.j2  21-install-opensearch.yaml.j2  22-patch-opensearch-service.yaml  30-assert.yaml  30-test-opensearch.yaml
tests/templates/kuttl/logging/: 10-assert.yaml  10-install-opensearch-vector-aggregator.yaml  10_opensearch-vector-aggregator-values.yaml.j2  20-assert.yaml.j2  20-install-opensearch.yaml.j2  30-assert.yaml  30-test-opensearch.yaml
tests/templates/kuttl/metrics/: 01-rbac.yaml  01_rbac.yaml  10-assert.yaml  10-create-service-monitor.yaml  10-install-prometheus.yaml  10_kube-prometheus-stack-values.yaml  11-create-service-monitor.yaml  11-install-prometheus.yaml  11_service-monitor.yaml  20-install-opensearch.yaml.j2  30-assert.yaml  30-check-metrics.yaml
tests/templates/kuttl/opensearch-dashboards/: 02-limit-range.yaml  10-assert.yaml.j2  10-install-opensearch.yaml.j2  10-security-config-internal-users.yaml  11-assert.yaml.j2  11-install-opensearch.yaml.j2  20-assert.yaml  20-install-opensearch-dashboards.yaml.j2  20_opensearch-dashboards-values.yaml.j2  30-assert.yaml  30-test-opensearch-dashboards.yaml  30-test-opensearch-dashboards.yaml.j2  31-install-test-container.yaml.j2  35-assert.yaml  test.py
tests/templates/kuttl/security-config/: 10-security-config.yaml  11-assert.yaml  11-assert.yaml.j2  11-install-opensearch.yaml  11-install-opensearch.yaml.j2  11_install-opensearch.yaml.j2  20-assert.yaml  20-test-initial-security-config.yaml  21-assert.yaml  21-change-security-config.yaml  22-assert.yaml  22-test-updated-security-config.yaml
tests/templates/kuttl/smoke/: test.py  (+12 more)
(+54 files in other folders)
