[workspace]
members = ["rust/operator-binary"]
resolver = "2"

[workspace.package]
version = "0.0.0-dev"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "OSL-3.0"
edition = "2024"
repository = "https://github.com/stackabletech/opensearch-operator"

[workspace.dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", features = ["telemetry", "versioned"], tag = "stackable-operator-0.98.0" }

built = { version = "0.8.0", features = ["chrono", "git2"] }
clap = "4.5"
futures = { version = "0.3", features = ["compat"] }
rstest = "0.26"
schemars = { version = "1.0.0", features = ["url2"] } # same as in operator-rs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
uuid = "1.18"

#[patch."https://github.com/stackabletech/operator-rs"]
# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
