[workspace]
members = ["rust/operator-binary"]
resolver = "2"

[workspace.package]
version = "26.3.0"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "OSL-3.0"
edition = "2024"
repository = "https://github.com/stackabletech/opensearch-operator"

[workspace.dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.108.0", features = ["webhook"] }

built = { version = "0.8.0", features = ["chrono", "git2"] }
clap = "4.5"
futures = { version = "0.3", features = ["compat"] }
pretty_assertions = "1.4"
regex = "1.11"
rstest = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = { version = "0.9", features = ["futures"] }
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
uuid = "1.18"

[patch."https://github.com/stackabletech/operator-rs"]
# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
