[package]
name = "stackable-opensearch-operator"
description = "Stackable Operator for OpenSearch"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
build = "build.rs"

[features]
# The macro attributed_string_type is used in this operator. It produces test
# code if the feature "test-support" is set. This feature is defined here to
# suppress a Clippy warning.
test-support = []

[dependencies]
stackable-operator.workspace = true

clap.workspace = true
futures.workspace = true
json-patch.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[build-dependencies]
built.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
stackable-operator = { workspace = true, features = ["test-support"] }
